--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.2",
     "multer": "^1.4.3",
-    "nodemailer": "^6.6.3"
+    "nodemailer": "^6.6.3",
+    "otp-generator": "^2.0.1",
+    "twilio": "^3.67.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
